--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>PogobotGui</title>
   <base href="/">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   {{#unless environment.production}}
   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
   {{/unless}}
@@ -18,6 +18,7 @@
     <script src="{{.}}"></script>
     {{/each}}
     <script>
+      System.defaultJSExtensions = true;
       System.import('system-config.js').then(function () {
         System.import('main');
       }).catch(console.error.bind(console));
