migrate pokebank to angular data table

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>PogobotGui</title>
   <base href="/">
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/swimlane/angular2-data-table/master/release/datatable.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/swimlane/angular2-data-table/master/release/material.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   {{#unless environment.production}}
   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
